--- a/src/app/delivery-cancel-confirm/delivery-cancel-confirm.page.html
+++ b/src/app/delivery-cancel-confirm/delivery-cancel-confirm.page.html
@@ -31,6 +31,6 @@
 </ion-content>
 
 <ion-footer>
-  <ion-button id="app-form-submit" (click)="OnSubmit()" [disabled]="fg.invalid" color="danger" expand="full">ตกลง
+  <ion-button class="ion-no-margin" id="app-form-submit" (click)="OnSubmit()" [disabled]="fg.invalid" color="danger" expand="full">ตกลง
   </ion-button>
 </ion-footer>
