mock endpoint to cancelConfirm

--- a/src/app/delivery-order-detail/delivery-order-detail.page.html
+++ b/src/app/delivery-order-detail/delivery-order-detail.page.html
@@ -6,7 +6,7 @@
 <ion-content mode="ios">
   <ng-container *ngIf="true">
     <ion-item color="tertiary" lines="full">
-      <ion-grid class="ion-padding-top ion-padding-bottom">
+      <ion-grid class="ion-no-padding ion-padding-vertical">
         <ion-row>
           <ion-col class="ion-no-padding">
             <b>รายละเอียดการจ่ายเงิน</b>
