--- a/src/app/delivery-order-main/delivery-order-main.page.html
+++ b/src/app/delivery-order-main/delivery-order-main.page.html
@@ -5,12 +5,12 @@
 </ion-header>
 
 <ion-content mode="ios">
-  <ng-container *ngIf="true">
+  <ng-container *ngIf="data$ | async as data">
     <ion-item color="tertiary" lines="none" class="ion-margin-bottom">
       <ion-avatar class="avatar-small" slot="start">
-        <img src="assets/icon/favicon.png" />
+        <img [src]="data.delivery?.logoImage" />
       </ion-avatar>
-      <ion-label><b>delivery A</b> </ion-label>
+      <ion-label><b>{{ data.delivery?.name }}</b> </ion-label>
     </ion-item>
 
     <ion-item color="tertiary" lines="none">
@@ -25,16 +25,46 @@
     <ion-item color="tertiary" lines="none">
       <ion-row class="boxStepProgressBar">
         <div>
-          <li><div class="nodeSuccess"></div><p>รอ (10/2/56 )</p></li>
+          <li>
+            <div class="nodeSuccess"></div>
+            <ion-text color="medium">
+              <p *ngIf="data.createDate == null">รอ</p>
+            </ion-text>
+            <p *ngIf="data.createDate != null">รอ ({{ data.createDate | date:'H:mm' }} น.)</p>
+          </li>
 
-          <li><div [class]="statusRecieved ? 'lineSuccess' : 'lineUnSuccess'"></div></li>
-          <li><div [class]="statusRecieved ? 'nodeSuccess' : 'nodeUnSuccess'"></div><p>รับออเดอร์ (10/2/56 )</p></li>
-         
-          <li><div [class]="statusShipping ? 'lineSuccess' : 'lineUnSuccess'"></div></li>
-          <li><div [class]="statusShipping ? 'nodeSuccess' : 'nodeUnSuccess'"></div><p>จัดส่ง (10/2/56 )</p></li>
-         
-          <li><div [class]="statusDone ? 'lineSuccess' : 'lineUnSuccess'"></div></li>
-          <li><div [class]="statusDone ? 'nodeSuccess' : 'nodeUnSuccess'"></div><p>ของถึงแล้ว (10/2/56 )</p></li>
+          <li>
+            <div [class]="statusReceived ? 'lineSuccess' : 'lineUnSuccess'"></div>
+          </li>
+          <li>
+            <div [class]="statusReceived ? 'nodeSuccess' : 'nodeUnSuccess'"></div>
+            <ion-text color="medium">
+              <p *ngIf="data.acceptRequestDate == null">รับออเดอร์</p>
+            </ion-text>
+            <p *ngIf="data.acceptRequestDate != null">รับออเดอร์ ({{ data.acceptRequestDate | date:'H:mm' }} น.)</p>
+          </li>
+
+          <li>
+            <div [class]="statusShipping ? 'lineSuccess' : 'lineUnSuccess'"></div>
+          </li>
+          <li>
+            <div [class]="statusShipping ? 'nodeSuccess' : 'nodeUnSuccess'"></div>
+            <ion-text color="medium">
+              <p *ngIf="data.shippingDate == null">จัดส่ง</p>
+            </ion-text>
+            <p *ngIf="data.shippingDate != null">จัดส่ง ({{ data.shippingDate | date:'H:mm' }} น.)</p>
+          </li>
+
+          <li>
+            <div [class]="statusDone ? 'lineSuccess' : 'lineUnSuccess'"></div>
+          </li>
+          <li>
+            <div [class]="statusDone ? 'nodeSuccess' : 'nodeUnSuccess'"></div>
+            <ion-text color="medium">
+              <p *ngIf="data.destinationDate == null">ของถึงแล้ว</p>
+            </ion-text>
+            <p *ngIf="data.destinationDate != null">ของถึงแล้ว ({{ data.destinationDate | date:'H:mm' }} น.)</p>
+          </li>
         </div>
       </ion-row>
     </ion-item>
@@ -54,11 +84,20 @@
         </ion-text>
       </ion-note>
       <!-- TODO : implemnt Endpoint -->
-      <ion-note slot="end" (click)="onCancel('66523')">
+      <ion-note *ngIf="data.cancelRequestId == null" slot="end" (click)="onCancel('66523')">
         <ion-label color="dark">
           <h3>
             <b>
               ยกเลิก
+            </b>
+          </h3>
+        </ion-label>
+      </ion-note>
+      <ion-note *ngIf="data.cancelRequestId != null" slot="end">
+        <ion-label color="danger">
+          <h3>
+            <b>
+              รอการอนุมัติยกเลิก !
             </b>
           </h3>
         </ion-label>
@@ -80,40 +119,26 @@
 
     <ion-item color="tertiary" lines="none">
       <ion-avatar slot="start" class="avatar-small">
-        <img src="assets/icon/favicon.png">
+        <img [src]="data.restaurant?.logoImage">
       </ion-avatar>
       <ion-label>
-        <h2><b> restaurant A </b></h2>
+        <h2><b> {{ data.restaurant?.name }} </b></h2>
       </ion-label>
     </ion-item>
     <ion-list lines="full">
-      <ion-item color="tertiary">
+      <ion-item color="tertiary" *ngFor="let item of data.productList">
         <ion-label color="dark">
-          <p>x1 ชานม</p>
+          <p>x{{ item.quantity }} {{ item.name }}</p>
           <ion-text color="danger">
-            <p *ngIf="true" class="ion-text-wrap">หวานน้อย</p>
+            <p *ngIf="item.option" class="ion-text-wrap">{{ item.option }}</p>
+            <p *ngIf="!item.option" class="ion-text-wrap">&nbsp;</p>
+
           </ion-text>
         </ion-label>
         <ion-label>
           <ion-note slot="end" class="ion-text-end">
             <ion-text color="dark">
-              <p>฿50</p>
-              <p>&nbsp;</p>
-            </ion-text>
-          </ion-note>
-        </ion-label>
-      </ion-item>
-      <ion-item color="tertiary">
-        <ion-label color="dark">
-          <p>x1 ชานม</p>
-          <ion-text color="danger">
-            <p *ngIf="true" class="ion-text-wrap">หวานมาก</p>
-          </ion-text>
-        </ion-label>
-        <ion-label>
-          <ion-note slot="end" class="ion-text-end">
-            <ion-text color="dark">
-              <p>฿50</p>
+              <p>฿{{ item.quantity * item.price | number }}</p>
               <p>&nbsp;</p>
             </ion-text>
           </ion-note>
