binding with mock

--- a/src/app/delivery-order-main/delivery-order-main.page.html
+++ b/src/app/delivery-order-main/delivery-order-main.page.html
@@ -138,7 +138,7 @@
         <ion-label>
           <ion-note slot="end" class="ion-text-end">
             <ion-text color="dark">
-              <p>฿{{ item.quantity * item.price | number }}</p>
+              <p>฿{{ ParseToTwoDecimal(item.quantity * item.price) | number:'1.2-2' }}</p>
               <p>&nbsp;</p>
             </ion-text>
           </ion-note>
@@ -147,120 +147,7 @@
     </ion-list>
 
   </ng-container>
-  <!-- <ng-container *ngIf="data$ | async as data">
-    <ion-item color="tertiary" lines="none">
-      <ion-avatar class="avatar-small" slot="start">
-        <img src="assets/icon/favicon.png" />
-      </ion-avatar>
-      <ion-label> {{ data.delivery?.name }} </ion-label>
-    </ion-item>
-
-    <ion-item color="tertiary" lines="none" class="ion-padding-top">
-      <ion-label>
-        <h2><b>สถานะจัดส่ง</b></h2>
-        <ion-text color="medium">
-          <p>เวลาที่จัดส่ง 15 นาที</p>
-        </ion-text>
-      </ion-label>
-    </ion-item>
-
-    <ion-item color="tertiary" lines="none">
-      <ion-row class="boxStepProgressBar">
-        <div>
-          <li>
-            <div class="nodeSuccess"></div>
-            <p>รอ ({{ data.createDate }})</p>
-          </li>
-          <li>
-            <div class="lineUnSuccess"></div>
-          </li>
-          <li>
-            <div class="nodeUnSuccess"></div>
-            <p>รับออเดอร์ ({{ data.acceptRequestDate }})</p>
-          </li>
-          <li>
-            <div class="lineUnSuccess"></div>
-          </li>
-          <li>
-            <div class="nodeUnSuccess"></div>
-            <p>จัดส่ง ({{ data.shippingDate }})</p>
-          </li>
-          <li>
-            <div class="lineUnSuccess"></div>
-          </li>
-          <li>
-            <div *ngIf="'false'" class="nodeUnSuccess"></div>
-            <p>ของถึงแล้ว ({{ data.destinationDate }})</p>
-          </li>
-        </div>
-      </ion-row>
-    </ion-item>
-
-    <ion-item color="tertiary" lines="full">
-      <ion-note slot="start">
-        <ion-text color="dark">
-          <ion-label>
-            <ion-icon name="call-outline"></ion-icon>
-            <b>
-              ติดต่อ
-            </b>
-          </ion-label>
-        </ion-text>
-      </ion-note>
-      <ion-note slot="end">
-        <ion-text color="dark">
-          <b>
-            ยกเลิก
-          </b>
-        </ion-text>
-      </ion-note>
-    </ion-item>
-
-    <ion-item color="light" color="tertiary" lines="none">
-      <ion-label>
-        <h2><b>รายการที่สั่ง</b></h2>
-      </ion-label>
-      <ion-note slot="end">
-        <ion-text color="success">
-          <ion-label>
-            <ion-icon color="danger" name="location-outline"></ion-icon>
-          </ion-label>
-        </ion-text>
-      </ion-note>
-    </ion-item>
-
-    <ion-item color="tertiary" lines="none">
-      <ion-avatar slot="start" class="avatar-small">
-        <img [src]="data.restaurant?.logoImage != null ? data.restaurant.logoImage : 'assets/icon/favicon.png'">
-      </ion-avatar>
-      <label>
-        <h5><b> {{ data.restaurant?.name }} </b></h5>
-      </label>
-    </ion-item>
-
-    <ion-item *ngFor="let data of data.productList" color="tertiary" lines="none" class="ion-padding-bottom">
-      <ion-grid class="ion-no-padding">
-        <ion-row>
-          <ion-col class="ion-no-padding">
-            <ion-label>x{{ data.quantity }} {{ data.name }}</ion-label>
-          </ion-col>
-          <ion-col class="ion-no-padding ion-text-right">฿{{ data.quantity * data.price | number }}
-          </ion-col>
-        </ion-row>
-        <ion-row>
-          <ion-col class="ion-no-padding">
-            <ion-label *ngIf="data.option" color="danger"> {{ data.option }} </ion-label>
-            <ion-label *ngIf="!data.option" color="danger">&nbsp;</ion-label>
-          </ion-col>
-          <ion-col class="ion-no-padding ion-text-right">
-            <ion-label color="medium">สถานะ...</ion-label>
-          </ion-col>
-        </ion-row>
-      </ion-grid>
-    </ion-item>
-  </ng-container> -->
-
-  <ng-container *ngIf="false">
+   <ng-container *ngIf="!hasLoaded">
     <ion-item lines="none">
       <ion-avatar slot="start">
         <ion-skeleton-text animated></ion-skeleton-text>
