--- a/src/app/delivery-order-detail/delivery-order-detail.page.html
+++ b/src/app/delivery-order-detail/delivery-order-detail.page.html
@@ -4,101 +4,9 @@
 </ion-header>
 
 <ion-content mode="ios">
-  <ng-container *ngIf="true">
+  <ng-container *ngIf="data$ | async as data">
     <ion-item color="tertiary" lines="full">
       <ion-grid class="ion-no-padding ion-padding-vertical">
-        <ion-row>
-          <ion-col class="ion-no-padding">
-            <b>รายละเอียดการจ่ายเงิน</b>
-          </ion-col>
-        </ion-row>
-        <ion-row>
-          <ion-col class="ion-no-padding">
-            <ion-label>รวมค่าสินค้า</ion-label>
-          </ion-col>
-          <ion-col class="ion-no-padding ion-text-right">฿50
-          </ion-col>
-        </ion-row>
-        <ion-row>
-          <ion-col class="ion-no-padding">ค่าจัดส่ง
-          </ion-col>
-          <ion-col class="ion-no-padding ion-text-right">฿10
-          </ion-col>
-        </ion-row>
-        <ion-row>
-          <ion-col class="ion-no-padding">ส่วนลด
-          </ion-col>
-          <!-- TODO ยังไม่ binding-->
-          <ion-col class="ion-no-padding ion-text-right">฿10
-          </ion-col>
-        </ion-row>
-        <ion-row>
-          <ion-col class="ion-no-padding">ราคารวมทั้งหมด
-          </ion-col>
-          <!-- TODO ยังไม่รวมส่วนลด -->
-          <ion-col class="ion-no-padding ion-text-right">
-            <ion-text>฿70</ion-text>
-          </ion-col>
-        </ion-row>
-      </ion-grid>
-    </ion-item>
-
-    <ion-item color="tertiary" lines="none">
-      <ion-grid class="ion-no-padding ion-padding-top">
-        <ion-row>
-          <ion-col class="ion-no-padding">
-            <b>restaurant A</b>
-          </ion-col>
-        </ion-row>
-        <ion-row>
-          <ion-col class="ion-no-padding">
-            <ion-label color="medium">
-              <h3> รายการ (2 ชิ้น)
-              </h3>
-            </ion-label>
-          </ion-col>
-        </ion-row>
-      </ion-grid>
-    </ion-item>
-
-    <ion-list lines="full">
-      <ion-item color="tertiary">
-        <ion-label color="dark">
-          <p>x1 ชานม</p>
-          <ion-text color="danger">
-            <p *ngIf="true" class="ion-text-wrap">หวานน้อย</p>
-          </ion-text>
-        </ion-label>
-        <ion-label>
-          <ion-note slot="end" class="ion-text-end">
-            <ion-text color="dark">
-              <p>฿50</p>
-              <p>&nbsp;</p>
-            </ion-text>
-          </ion-note>
-        </ion-label>
-      </ion-item>
-      <ion-item color="tertiary">
-        <ion-label color="dark">
-          <p>x1 ชานม</p>
-          <ion-text color="danger">
-            <p *ngIf="true" class="ion-text-wrap">หวานมาก</p>
-          </ion-text>
-        </ion-label>
-        <ion-label>
-          <ion-note slot="end" class="ion-text-end">
-            <ion-text color="dark">
-              <p>฿50</p>
-              <p>&nbsp;</p>
-            </ion-text>
-          </ion-note>
-        </ion-label>
-      </ion-item>
-    </ion-list>
-  </ng-container>
-  <!-- <ng-container *ngIf="data$ | async as data">
-    <ion-item color="tertiary" lines="full">
-      <ion-grid class="ion-padding-top ion-padding-bottom">
         <ion-row>
           <ion-col class="ion-no-padding">
             <b>รายละเอียดการจ่ายเงิน</b>
@@ -114,57 +22,65 @@
         <ion-row>
           <ion-col class="ion-no-padding">ค่าจัดส่ง
           </ion-col>
-          <ion-col class="ion-no-padding ion-text-right">฿ {{ data.deliveryPriceTHB }}
+          <ion-col class="ion-no-padding ion-text-right">฿{{ data.deliveryPriceTHB }}
           </ion-col>
         </ion-row>
         <ion-row>
           <ion-col class="ion-no-padding">ส่วนลด
           </ion-col>
-          TODO ยังไม่ binding
-          <ion-col class="ion-no-padding ion-text-right">฿10
+          <!-- TODO ยังไม่ binding-->
+          <ion-col class="ion-no-padding ion-text-right">฿0
           </ion-col>
         </ion-row>
         <ion-row>
           <ion-col class="ion-no-padding">ราคารวมทั้งหมด
           </ion-col>
-          TODO ยังไม่รวมส่วนลด
+          <!-- TODO ยังไม่รวมส่วนลด -->
           <ion-col class="ion-no-padding ion-text-right">
-            <ion-text>฿ {{ data.totalPrice + data.deliveryPriceTHB | number }}</ion-text>
+            <ion-text>฿{{ data.totalPrice + data.deliveryPriceTHB | number }}</ion-text>
           </ion-col>
         </ion-row>
       </ion-grid>
     </ion-item>
 
-    <ion-item color="tertiary" lines="none" class="ion-padding-bottom">
-      <ion-row>
-        <ion-col class="ion-no-padding">
-          <b>{{ data.restaurant?.name }}</b>
-        </ion-col>
-      </ion-row>
-      <ion-row>
-        <ion-col class="ion-no-padding">
-          <ion-label color="medium">
-            รายการ ({{ data.totalQuantity }} ชิ้น)
-          </ion-label>
-        </ion-col>
-      </ion-row>
-    </ion-item>
-    
-    <ion-item *ngFor="let data of data.productList" color="tertiary" lines="none" class="ion-padding-bottom">
-      <ion-grid class="ion-no-padding">
+    <ion-item color="tertiary" lines="none">
+      <ion-grid class="ion-no-padding ion-padding-top">
         <ion-row>
           <ion-col class="ion-no-padding">
-            <ion-label>x{{ data.quantity }} {{ data.name }}</ion-label>
-          </ion-col>
-          <ion-col class="ion-no-padding ion-text-right">฿{{ data.quantity * data.price | number }}
+            <b>{{ data.restaurant?.name }}</b>
           </ion-col>
         </ion-row>
         <ion-row>
           <ion-col class="ion-no-padding">
-            <ion-text color="danger">{{ data.option }}</ion-text>
+            <ion-label color="medium">
+              <h3>
+                รายการ ({{ data.totalQuantity | number }} ชิ้น)
+              </h3>
+            </ion-label>
           </ion-col>
         </ion-row>
       </ion-grid>
     </ion-item>
-  </ng-container> -->
+
+    <ion-list lines="full">
+      <ion-item color="tertiary" *ngFor="let item of data.productList">
+        <ion-label color="dark">
+          <p>x{{ item.quantity }} {{ item.name }}</p>
+          <ion-text color="danger">
+            <p *ngIf="item.option" class="ion-text-wrap">{{ item.option }}</p>
+            <p *ngIf="!item.option" class="ion-text-wrap">&nbsp;</p>
+
+          </ion-text>
+        </ion-label>
+        <ion-label>
+          <ion-note slot="end" class="ion-text-end">
+            <ion-text color="dark">
+              <p>฿{{ ParseToTwoDecimal(item.quantity * item.price) | number:'1.2-2' }}</p>
+              <p>&nbsp;</p>
+            </ion-text>
+          </ion-note>
+        </ion-label>
+      </ion-item>
+    </ion-list>
+  </ng-container>
 </ion-content>
