--- a/src/app/delivery-order-main/delivery-order-main.page.html
+++ b/src/app/delivery-order-main/delivery-order-main.page.html
@@ -41,7 +41,7 @@
             <ion-text color="medium">
               <p *ngIf="data.acceptRequestDate == null">รับออเดอร์</p>
             </ion-text>
-            <p *ngIf="data.acceptRequestDate != null">รับออเดอร์ ({{ data.acceptRequestDate | date:'H:mm' }} น.)</p>
+            <p *ngIf="data.acceptRequestDate != null">รับออเดอร์ ({{ dateReceived | date:'H:mm' }} น.)</p>
           </li>
 
           <li>
@@ -52,7 +52,7 @@
             <ion-text color="medium">
               <p *ngIf="data.shippingDate == null">จัดส่ง</p>
             </ion-text>
-            <p *ngIf="data.shippingDate != null">จัดส่ง ({{ data.shippingDate | date:'H:mm' }} น.)</p>
+            <p *ngIf="data.shippingDate != null">จัดส่ง ({{ dateShipping | date:'H:mm' }} น.)</p>
           </li>
 
           <li>
@@ -63,7 +63,7 @@
             <ion-text color="medium">
               <p *ngIf="data.destinationDate == null">ของถึงแล้ว</p>
             </ion-text>
-            <p *ngIf="data.destinationDate != null">ของถึงแล้ว ({{ data.destinationDate | date:'H:mm' }} น.)</p>
+            <p *ngIf="data.destinationDate != null">ของถึงแล้ว ({{ dateDone | date:'H:mm' }} น.)</p>
           </li>
         </div>
       </ion-row>
@@ -84,7 +84,7 @@
         </ion-text>
       </ion-note>
       <!-- TODO : implemnt Endpoint -->
-      <ion-note *ngIf="data.cancelRequestId == null" slot="end" (click)="onCancel('66523')">
+      <ion-note *ngIf="!statusCancel" slot="end" (click)="onCancel('66523')">
         <ion-label color="dark">
           <h3>
             <b>
@@ -93,7 +93,7 @@
           </h3>
         </ion-label>
       </ion-note>
-      <ion-note *ngIf="data.cancelRequestId != null" slot="end">
+      <ion-note *ngIf="statusCancel" slot="end">
         <ion-label color="danger">
           <h3>
             <b>
