change rating fields name

--- a/src/app/delivery-receive-confirm/delivery-receive-confirm.page.html
+++ b/src/app/delivery-receive-confirm/delivery-receive-confirm.page.html
@@ -44,7 +44,7 @@
       </ion-item>
 
       <ion-item color="tertiary" lines="none" class="ion-no-padding">
-        <ion-textarea class="ion-no-padding" placeholder="เขียนคำแนะนำการให้บริการ" rows="4" formControlName="note">
+        <ion-textarea class="ion-no-padding" placeholder="เขียนคำแนะนำการให้บริการ" rows="4" formControlName="counsel">
         </ion-textarea>
       </ion-item>
     </ion-card-header>
