implement send endpoint param

--- a/src/app/delivery-order-main/delivery-order-main.page.html
+++ b/src/app/delivery-order-main/delivery-order-main.page.html
@@ -84,7 +84,7 @@
         </ion-text>
       </ion-note>
       <!-- TODO : implemnt Endpoint -->
-      <ion-note *ngIf="!statusCancel" slot="end" (click)="onCancel('66523')">
+      <ion-note *ngIf="!statusCancel" slot="end" (click)="onCancel(data.manaEndpoint)">
         <ion-label color="dark">
           <h3>
             <b>
