edit text cancel

--- a/src/app/delivery-cancel-confirm/delivery-cancel-confirm.page.html
+++ b/src/app/delivery-cancel-confirm/delivery-cancel-confirm.page.html
@@ -14,8 +14,8 @@
 
     <ion-item color="tertiary" lines="full">
       <ion-select formControlName="heading" slot="end" placeholder="โปรดเลือก">
-        <ion-select-option value="รถเสีย">รถเสีย</ion-select-option>
-        <ion-select-option value="ร้านอาหารไม่สามารถทำอาหารได้">ร้านอาหารไม่สามารถทำอาหารได้</ion-select-option>
+        <ion-select-option value="สั่งผิด">สั่งผิด</ion-select-option>
+        <ion-select-option value="ต้องการเปลี่ยนเมนูอาหาร">ต้องการเปลี่ยนเมนูอาหาร</ion-select-option>
       </ion-select>
     </ion-item>
 
