style shop-select

--- a/src/app/shop-select/shop-select.page.html
+++ b/src/app/shop-select/shop-select.page.html
@@ -8,34 +8,25 @@
   <ng-container *ngIf="hasLoaded == 'y'">
     <ion-list *ngIf="data$ | async as data" color="tertiary">
       <ion-list-header color="tertiary" mode="md">
-        <ion-label color="danger">
-          <h1><b>ร้านแนะนำ</b></h1>
+        <ion-label color="warning">
+          <h1><b>ร้าน</b></h1>
         </ion-label>
       </ion-list-header>
-        <ion-item color="tertiary" lines="none" *ngFor="let item of data" (click)="onSelect(item._id)">
-          <div class="ion-margin-end">
-            <img [src]="item.logoImage" alt="">
-            <ion-label class="ion-text-center">
-              <p><b>{{ item.name }}</b></p>
-            </ion-label>
-            <!-- <ion-row>
-              <ion-col>
-                <ion-label>
-                  <ion-text color="medium" >
-                    <p>คาเฟ่</p>
-                  </ion-text>
-                </ion-label>
-              </ion-col>
-              <ion-col class="ion-text-end">
-                <ion-label>
-                  <ion-text color="medium" >
-                    <p><ion-icon name="time-outline" color="danger"></ion-icon>10นาที</p>
-                  </ion-text>
-                </ion-label>
-              </ion-col>
-            </ion-row> -->
-          </div>
-        </ion-item>
+      <ion-item color="tertiary" lines="inset" *ngFor="let item of data" (click)="onSelect(item._id)">
+        <ion-avatar>
+          <img class="shop-img non-circle" [src]="item.logoImage">
+        </ion-avatar>
+        <ion-label class="ion-margin-start">
+          <h2><b>{{ item.name }}</b></h2>
+          <ion-text color="medium">
+            <h3 class="ion-margin">
+              หมวดหมู่
+              <br>
+              <img width="10" height="10" src="assets/imgs/timered.png">&nbsp;xx นาที
+            </h3>
+          </ion-text>
+        </ion-label>
+      </ion-item>
     </ion-list>
   </ng-container>
 
