--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -45,12 +45,12 @@
   --ion-color-success-tint: #47df74;
 
   /** warning **/
-  --ion-color-warning: #ffc40d;
-  --ion-color-warning-rgb: 255, 196, 13;
+  --ion-color-warning: #FC7315;
+  --ion-color-warning-rgb: 252,115,21;
   --ion-color-warning-contrast: #000000;
-  --ion-color-warning-contrast-rgb: 0, 0, 0;
-  --ion-color-warning-shade: #e0ac0b;
-  --ion-color-warning-tint: #ffca25;
+  --ion-color-warning-contrast-rgb: 0,0,0;
+  --ion-color-warning-shade: #de6512;
+  --ion-color-warning-tint: #fc812c;
 
   /** danger **/
   --ion-color-danger: #ec1c24;
