--- a/src/app/delivery-receive-confirm/delivery-receive-confirm.page.html
+++ b/src/app/delivery-receive-confirm/delivery-receive-confirm.page.html
@@ -4,50 +4,76 @@
   </ion-toolbar>
 </ion-header>
 
-<ion-content mode="ios">
+<ion-content mode="ios" class="ion-padding-top">
   <form [formGroup]="fg" (ngSubmit)="OnSubmit()">
-    <ion-card-header color="tertiary">
-      <ion-avatar class="center ion-margin-top">
-        <img
-          src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRkdV2Pr8PLYit-rTrXH9Fk6my1UtfpfWNLCvzvLtohVrxgDmIw6g&s">
+
+    <ion-card color="tertiary" class="ion-padding-top">
+      <ion-avatar class="center ion-margin-vertical avatar-m">
+        <img src="assets/imgs/dfbiker.png">
       </ion-avatar>
 
-      <ion-item color="tertiary" lines="none" class="ion-text-center ion-margin-top">
-        <ion-label>
-          <h2><b>ให้คะแนนการบริการ</b></h2>
-        </ion-label>
-      </ion-item>
+      <ion-label class="ion-text-center">
+        <h2><b>ให้คะแนนการบริการคนส่ง</b></h2>
+      </ion-label>
 
-      <ion-item color="tertiary" lines="none">
+      <ion-item color="tertiary" lines="full" class="ion-padding-bottom">
         <div class="rating center">
-          <input type="radio" [checked]="rating===5" />
-          <label (click)='showRating(5)'>5 stars</label>
+          <input type="radio" [checked]="riderRating===5" />
+          <label (click)='showRiderRating(5)'>5 stars</label>
 
-          <input type="radio" [checked]="rating===4" />
-          <label (click)='showRating(4)'>4 stars</label>
+          <input type="radio" [checked]="riderRating===4" />
+          <label (click)='showRiderRating(4)'>4 stars</label>
 
-          <input type="radio" [checked]="rating===3" />
-          <label (click)='showRating(3)'>3 stars</label>
+          <input type="radio" [checked]="riderRating===3" />
+          <label (click)='showRiderRating(3)'>3 stars</label>
 
-          <input type="radio" [checked]="rating===2" />
-          <label (click)='showRating(2)'>2 stars</label>
+          <input type="radio" [checked]="riderRating===2" />
+          <label (click)='showRiderRating(2)'>2 stars</label>
 
-          <input type="radio" [checked]="rating===1" />
-          <label (click)='showRating(1)'>1 star</label>
+          <input type="radio" [checked]="riderRating===1" />
+          <label (click)='showRiderRating(1)'>1 star</label>
         </div>
       </ion-item>
+    </ion-card>
 
-      <ion-item color="tertiary" lines="none" class="ion-no-padding">
-        <ion-label>
-          <h2><b>คำแนะนำ</b></h2>
-        </ion-label>
-      </ion-item>
+    <ion-card color="tertiary">
+      <ion-avatar class="center ion-margin-vertical avatar-m">
+        <img src="assets/imgs/dfrest.png">
+      </ion-avatar>
 
-      <ion-item color="tertiary" lines="none" class="ion-no-padding">
-        <ion-textarea class="ion-no-padding" placeholder="เขียนคำแนะนำการให้บริการ" rows="4" formControlName="counsel">
-        </ion-textarea>
+      <ion-label class="ion-text-center">
+        <h2><b>ให้คะแนนการบริการร้านอาหาร</b></h2>
+      </ion-label>
+
+      <ion-item color="tertiary" lines="none" class="ion-padding-bottom">
+        <div class="rating center">
+          <input type="radio" [checked]="restaurantRating===5" />
+          <label (click)='showResataurantRating(5)'>5 stars</label>
+
+          <input type="radio" [checked]="restaurantRating===4" />
+          <label (click)='showResataurantRating(4)'>4 stars</label>
+
+          <input type="radio" [checked]="restaurantRating===3" />
+          <label (click)='showResataurantRating(3)'>3 stars</label>
+
+          <input type="radio" [checked]="restaurantRating===2" />
+          <label (click)='showResataurantRating(2)'>2 stars</label>
+
+          <input type="radio" [checked]="restaurantRating===1" />
+          <label (click)='showResataurantRating(1)'>1 star</label>
+        </div>
       </ion-item>
-    </ion-card-header>
+    </ion-card>
+
+    <ion-item color="tertiary" lines="none" class="ion-margin-top">
+      <ion-label class="">
+        <h2><b>คำแนะนำ</b></h2>
+      </ion-label>
+    </ion-item>
+    <ion-item color="tertiary" lines="none" class="">
+      <ion-textarea class="ion-no-padding" placeholder="เขียนคำแนะนำการให้บริการ" rows="4" formControlName="counsel">
+      </ion-textarea>
+    </ion-item>
 
     <ion-item color="light" lines="none" class="ion-text-center ion-padding">
       <ion-label color="medium">
@@ -61,6 +87,7 @@
 </ion-content>
 
 <ion-footer>
-  <ion-button class="ion-no-margin" id="app-form-submit" [disabled]="fg.invalid" (click)="OnSubmit()" color="danger" expand="full">ตกลง
+  <ion-button class="ion-no-margin" id="app-form-submit" [disabled]="fg.invalid" (click)="OnSubmit()" color="danger"
+    expand="full">ตกลง
   </ion-button>
 </ion-footer>
