--- a/src/app/shop-select/shop-select.page.scss
+++ b/src/app/shop-select/shop-select.page.scss
@@ -16,3 +16,11 @@ ion-avatar {
     width: unset !important;
     height: unset !important;
 }
+
+.location-center{
+    margin: 0;
+    position: absolute;
+    top: 45%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
