--- a/src/app/delivery-cancel-completed/delivery-cancel-completed.page.html
+++ b/src/app/delivery-cancel-completed/delivery-cancel-completed.page.html
@@ -1,9 +1,128 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title>delivery-cancel-completed</ion-title>
+    <ion-title>{{ title }}</ion-title>
   </ion-toolbar>
 </ion-header>
 
-<ion-content>
+<ion-content mode="ios" class="ion-padding-top">
+  <ion-card color="tertiary" class="ion-padding-top">
+    <ion-card-content class="ion-no-padding">
+      <div class="ion-text-center ion-padding-top">
+        <ion-avatar slot="start" class="avatar-l center  ion-margin-bottom">
+          <img src="assets/imgs/dfdeliverycom.png">
+        </ion-avatar>
+        <ion-label class="ion-text-center">
+          <h2><b>คำสั่งซื้อของคุณถูกยกเลิกแล้ว</b></h2>
+        </ion-label>
+      </div>
+      <ion-item color="terticary" lines="full">
+        <ion-label>
+          <h3><b>เหตุผล</b></h3>
+          <h2>ร้านไม่สามารถทำได้</h2>
+        </ion-label>
+      </ion-item>
+      <ion-item color="light" color="tertiary" lines="none">
+        <ion-label>
+          <h2><b>รายการที่สั่ง</b></h2>
+        </ion-label>
+      </ion-item>
+      <ion-item color="tertiary" lines="none">
+        <ion-avatar slot="start" class="avatar-s">
+          <img src="assets/imgs/dfrest.png">
+        </ion-avatar>
+        <ion-label>
+          <h3><b> ร้าน AAA </b></h3>
+        </ion-label>
+      </ion-item>
+      <ion-list lines="full">
+        <ion-item color="tertiary" class="ion-no-padding">
+          <ion-grid class="ion-padding-start ion-padding-vertical text-hidden">
 
+            <ion-row class="ion-padding-start">
+              <ion-col class="ion-no-padding text-hidden">
+                <ion-label>
+                  <h3>X1 product A</h3>
+                </ion-label>
+              </ion-col>
+              <ion-col class="ion-no-padding ion-text-end" size="auto">
+                <ion-label>
+                  <h3>
+                    <ion-text color="danger" class="line-through">
+                      ฿20</ion-text>
+                    <ion-text>
+                      ฿10
+                    </ion-text>
+                  </h3>
+                </ion-label>
+              </ion-col>
+            </ion-row>
+
+            <ion-row class="ion-padding-start">
+              <ion-col class="ion-no-padding text-hidden">
+                <ion-label color="danger">
+                  <h3>
+                    <span>หวานน้อย, ไม่ใส่น้ำแข็ง</span>
+                  </h3>
+                </ion-label>
+              </ion-col>
+              <ion-col class="ion-no-padding" size="auto" *ngIf="false">
+                <ion-label color="medium">
+                  <h3>สถานะ:ยกเลิก</h3>
+                </ion-label>
+              </ion-col>
+            </ion-row>
+
+          </ion-grid>
+        </ion-item>
+
+
+        <ion-item color="tertiary" class="ion-no-padding">
+          <ion-grid class="ion-padding-start ion-padding-vertical text-hidden">
+
+            <ion-row class="ion-padding-start">
+              <ion-col class="ion-no-padding text-hidden">
+                <ion-label>
+                  <h3>X1 product A</h3>
+                </ion-label>
+              </ion-col>
+              <ion-col class="ion-no-padding ion-text-end" size="auto">
+                <ion-label>
+                  <h3>
+                    <ion-text>
+                      ฿10
+                    </ion-text>
+                  </h3>
+                </ion-label>
+              </ion-col>
+            </ion-row>
+
+            <ion-row class="ion-padding-start">
+              <ion-col class="ion-no-padding text-hidden">
+                <ion-label color="danger">
+                  <h3>
+                    <span>&nbsp;</span>
+                  </h3>
+                </ion-label>
+              </ion-col>
+              <ion-col class="ion-no-padding" size="auto" *ngIf="false">
+                <ion-label color="medium">
+                  <h3>สถานะ:ยกเลิก</h3>
+                </ion-label>
+              </ion-col>
+            </ion-row>
+
+
+          </ion-grid>
+        </ion-item>
+      </ion-list>
+    </ion-card-content>
+  </ion-card>
+  <ion-item color="light" lines="none" class="ion-text-center ion-padding">
+    <ion-label color="medium">
+      <h3>
+        <img height="12" src="assets/imgs/bikedark.png">
+        แจ้งรายงานปัญหา
+      </h3>
+    </ion-label>
+  </ion-item>
 </ion-content>
