--- a/src/app/delivery-cancel-completed/delivery-cancel-completed.page.html
+++ b/src/app/delivery-cancel-completed/delivery-cancel-completed.page.html
@@ -48,9 +48,9 @@
                 <ion-label>
                   <h3>
                     <ion-text color="danger" class="line-through">
-                      ฿20</ion-text>
+                      20&nbsp;<small>THB</small></ion-text>
                     <ion-text>
-                      ฿10
+                      10&nbsp;<small>THB</small>
                     </ion-text>
                   </h3>
                 </ion-label>
@@ -89,7 +89,7 @@
                 <ion-label>
                   <h3>
                     <ion-text>
-                      ฿10
+                      10&nbsp;<small>THB</small>
                     </ion-text>
                   </h3>
                 </ion-label>
