--- a/src/app/shop-menu-select/shop-menu-select.page.html
+++ b/src/app/shop-menu-select/shop-menu-select.page.html
@@ -14,6 +14,8 @@
           <ion-label>
             <ion-note> เปิด 11.00 - 19.00 น. ทุกวัน</ion-note>
             <h2><b>{{item.name}}</b></h2>
+            <h2>{{item.classification}}</h2>
+            <h2>&nbsp;</h2>
             <ion-note>{{item.note}}</ion-note>
             <ion-note>*4.8 15 นาที 10 บาท</ion-note>
           </ion-label>
@@ -36,7 +38,7 @@
 
         <div *ngFor="let c of cate">
           <div *ngIf="c.categoryId == segmentValue">
-            <ion-item *ngFor="let p of c?.products" color="tertiary" (click)="onSelect(p._id)">
+            <ion-item [disabled]="p.isSuspended" *ngFor="let p of c?.products" color="tertiary" (click)="onSelect(p._id)">
               <ion-thumbnail slot="start" class="ion-margin-vertical">
                 <img
                   [src]=" p.previewImageUrl ? p.previewImageUrl :'https://travel.mthai.com/app/uploads/2014/07/%E0%B8%A0%E0%B8%B2%E0%B8%9E%E0%B8%97%E0%B8%B4%E0%B8%A7%E0%B8%97%E0%B8%B1%E0%B8%A8%E0%B8%99%E0%B9%8C%E0%B8%AA%E0%B8%A7%E0%B8%A2%E0%B9%86-14.jpg'">
@@ -45,13 +47,15 @@
                 <ion-label>
                   <h2><b>{{p.name}}</b></h2>
                   <ion-note>
-                    <p>สินค้าหมด</p>
+                    <p *ngIf="p.isSuspended">สินค้าหมด</p>
+                    <p *ngIf="!p.isSuspended">&nbsp;</p>
                   </ion-note>
                 </ion-label>
               </ion-text>
               <ion-note color="dark" slot="end">
                 <ion-label>
-                  <h2><b>฿ {{p.price | number}}</b></h2>
+                  <h2><b>{{p.price | number}} <small>THB</small></b></h2>
+                  <h2>&nbsp;</h2>
                 </ion-label>
               </ion-note>
             </ion-item>
