--- a/src/app/delivery-order-detail/delivery-order-detail.page.html
+++ b/src/app/delivery-order-detail/delivery-order-detail.page.html
@@ -17,26 +17,27 @@
           <ion-col class="ion-no-padding">
             <ion-label>รวมค่าสินค้า</ion-label>
           </ion-col>
-          <ion-col class="ion-no-padding ion-text-right">฿{{ data.totalPrice | number:'1.0' }}
+          <ion-col class="ion-no-padding ion-text-right">{{ data.totalPrice | number:'1.0' }}&nbsp;<small>THB</small>
           </ion-col>
         </ion-row>
         <ion-row>
           <ion-col class="ion-no-padding">ค่าจัดส่ง
           </ion-col>
-          <ion-col class="ion-no-padding ion-text-right">฿{{ data.deliveryPriceTHB | number:'1.0' }}
+          <ion-col class="ion-no-padding ion-text-right">{{ data.deliveryPriceTHB | number:'1.0'
+            }}&nbsp;<small>THB</small>
           </ion-col>
         </ion-row>
         <ion-row>
           <ion-col class="ion-no-padding">ส่วนลด
           </ion-col>
-          <ion-col class="ion-no-padding ion-text-right">฿฿{{ data.totalDiscount | number:'1.0' }}
+          <ion-col class="ion-no-padding ion-text-right">{{ data.totalDiscount | number:'1.0' }}&nbsp;<small>THB</small>
           </ion-col>
         </ion-row>
         <ion-row>
           <ion-col class="ion-no-padding">ราคารวมทั้งหมด
           </ion-col>
           <ion-col class="ion-no-padding ion-text-right">
-            <ion-text>฿{{ data.totalProductPrice | number:'1.0' }}</ion-text>
+            <ion-text>{{ data.totalProductPrice | number:'1.0' }}&nbsp;<small>THB</small></ion-text>
           </ion-col>
         </ion-row>
       </ion-grid>
@@ -75,9 +76,10 @@
               <ion-label>
                 <h3>
                   <ion-text [color]="item.promoPrice? 'danger' : 'dark'" [ngClass]="{'line-through': item.promoPrice}">
-                    ฿{{ ParseToTwoDecimal(item.quantity * item.price) | number:'1.2-2' }}</ion-text>
+                    {{ ParseToTwoDecimal(item.quantity * item.price) | number:'1.2-2' }}&nbsp;<small>THB</small>
+                  </ion-text>
                   <ion-text *ngIf="item.promoPrice">
-                    ฿{{ ParseToTwoDecimal(item.quantity * item.promoPrice) | number:'1.2-2' }}
+                    {{ ParseToTwoDecimal(item.quantity * item.promoPrice) | number:'1.2-2' }}&nbsp;<small>THB</small>
                   </ion-text>
                 </h3>
               </ion-label>
@@ -86,12 +88,12 @@
 
           <ion-row class="ion-padding-start">
             <ion-col class="ion-no-padding">
-                <ion-label color="danger" class="ion-text-wrap">
-                  <h3> 
-                    <span *ngIf="item.option">{{ item.option }}</span>
-                    <span *ngIf="!item.option">&nbsp;</span>
-                  </h3>
-                </ion-label>
+              <ion-label color="danger" class="ion-text-wrap">
+                <h3>
+                  <span *ngIf="item.option">{{ item.option }}</span>
+                  <span *ngIf="!item.option">&nbsp;</span>
+                </h3>
+              </ion-label>
             </ion-col>
             <ion-col class="ion-no-padding" size="auto" *ngIf="false">
               <ion-label color="medium">
