--- a/src/global.scss
+++ b/src/global.scss
@@ -160,6 +160,9 @@ H3 ion-skeleton-text {
     width: 60%;
 }
 
+.text-hidden{
+    overflow: hidden;
+}
 
 ion-avatar.avatar-xs {
     width: 18px;
